<resources>
    <string name="app_name" translatable="false">SketchHub</string>
    <string name="page_gallery">Gallery</string>
    <string name="page_browse">Browse</string>
    <string name="page_history">History</string>
    <string name="profile">Profile</string>
    <string name="importCanvas">Import</string>
    <string name="exportCanvas">Export</string>
    <string name="search">Search…</string>
    <string name="advancedSearch">Advanced Search</string>
    <string name="collaborate">Collaborate</string>
    <string name="share">Share</string>
    <string name="createCanvas">Create</string>
    <string name="editCanvas">Edit</string>
    <string name="authentification">Authentification</string>
    <string name="inscription">Inscription</string>
    <string name="premium">Premium</string>
    <string name="myProfile">My profile</string>
    <string name="invitations">Invitations</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="selectedCanvas">selected</string>
    <string name="title">Title</string>
    <string name="visibilityPublic">Public</string>
    <string name="visibilityPrivate">Private</string>
    <string name="byUsername">By</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="exportName">Name</string>
    <string name="exportFormat">Format</string>
    <string name="defaultTitle">Untitled</string>
    <string name="passwordChange">Change password</string>
    <string name="noAccount">I don\'t have an account</string>
    <string name="forgotPassword">I forgot my password</string>
    <string name="seekJob">I seek a job</string>
    <string name="register">Register</string>
    <string name="premiumRegistration">Premium registration</string>
    <string name="priceMonth">5€/month</string>
    <string name="priceYear">50€/year</string>
    <string name="select">Select</string>
    <string name="anonymousUser">Anonymous user</string>
    <string name="upgradePremium">Upgrade</string>
    <string name="ellipsis">…</string>
    <string name="authenticate">Authenticate</string>
    <string name="visibility">Visibility</string>
    <string name="addCollaborator">Add a collaborator</string>
    <string name="changePasswordEmailSent">A password reset mail has been sent at your e-mail address.</string>
    <string name="premiumPurchased">Thank you for your subscription to Premium!</string>
    <string name="premiumPurchaseSuccess">Thank you!</string>
    <string name="passwordForgotten">Password reset</string>
    <string name="sendMail">Send mail</string>
</resources>