<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/canvasTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/defaultTitle"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:textSize="14sp"
        android:background="@drawable/input_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/canvasDescription"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/ellipsis"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:textSize="14sp"
        android:background="@drawable/input_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/visibility"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visibilityPrivate"
            android:textSize="12sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visibilityPublic"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>