<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/username"
        android:fontFamily="sans-serif-black" />

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/ellipsis"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:background="@drawable/input_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/email"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/ellipsis"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:scrollHorizontally="true"
        android:background="@drawable/input_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/password"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/ellipsis"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:scrollHorizontally="true"
        android:background="@drawable/input_bar" />

    <CheckBox
        android:id="@+id/registerSeekJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/seekJob"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:scaleX="1.4"
        android:scaleY="1.4" />

    <TextView
        android:id="@+id/registerTextSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/surname"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:visibility="gone" />

    <EditText
        android:id="@+id/registerSurname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/ellipsis"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:background="@drawable/input_bar"
        android:visibility="gone" />


    <TextView
        android:id="@+id/registerTextCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/city"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:visibility="gone" />

    <EditText
        android:id="@+id/registerCity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/ellipsis"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:background="@drawable/input_bar"
        android:visibility="gone" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="@string/register"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/premiumRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="@string/premiumRegistration"
        android:textSize="24sp"
        android:backgroundTint="@color/premium_light_purple"
        android:textColor="@color/lighter_gray"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>