<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/menuButton"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/menu">
    </View>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.5"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/sideMenu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/lighter_gray"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <FrameLayout
                android:id="@+id/profile"
                android:layout_width="50dp"
                android:layout_height="50dp">

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anonymousUser"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/blue" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editCanvas"
            android:layout_marginHorizontal="10dp"
            android:textSize="28sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/galleryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_gallery"
            android:layout_marginHorizontal="10dp"
            android:textSize="28sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/browseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_browse"
            android:layout_marginHorizontal="10dp"
            android:textSize="28sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/collaborateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collaborate"
            android:layout_marginHorizontal="10dp"
            android:textSize="28sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/light_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/historyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/page_history"
                android:layout_marginHorizontal="10dp"
                android:textSize="28sp" />

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignRight="@id/historyButton"
                android:layout_centerVertical="true"
                android:background="@drawable/premium_badge" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/light_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/exportButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exportCanvas"
                android:layout_marginHorizontal="10dp"
                android:textSize="28sp" />

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignRight="@id/exportButton"
                android:layout_centerVertical="true"
                android:background="@drawable/premium_badge" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/light_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/importButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/importCanvas"
                android:layout_marginHorizontal="10dp"
                android:textSize="28sp" />

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignRight="@id/importButton"
                android:layout_centerVertical="true"
                android:background="@drawable/premium_badge" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/light_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_marginHorizontal="10dp"
                android:textSize="28sp" />

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignRight="@id/shareButton"
                android:layout_centerVertical="true"
                android:background="@drawable/premium_badge" />

        </RelativeLayout>




    </LinearLayout>

</RelativeLayout>