<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/premium_plan"
        android:orientation="vertical"
        android:padding="7dp"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/priceMonth"
            android:textColor="@color/lighter_gray"
            android:textSize="24sp" />

        <Button
            android:id="@+id/monthlyPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/select"
            android:textSize="24sp"
            android:backgroundTint="@color/premium_purple"
            android:textColor="@color/lighter_gray"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/premium_plan"
        android:orientation="vertical"
        android:padding="7dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/priceYear"
            android:textColor="@color/lighter_gray"
            android:textSize="24sp" />

        <Button
            android:id="@+id/yearlyPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/select"
            android:textSize="24sp"
            android:backgroundTint="@color/premium_purple"
            android:textColor="@color/lighter_gray"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>