<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/profileUserAvatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/profile" />

        <View
            android:id="@+id/premiumBadge"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignRight="@id/profileUserAvatar"
            android:layout_alignTop="@id/profileUserAvatar"
            android:background="@drawable/big_premium_badge" />

        <TextView
            android:id="@+id/notificationBadge"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignRight="@id/profileUserAvatar"
            android:layout_alignBottom="@id/profileUserAvatar"
            android:background="@drawable/big_notification_badge"
            android:gravity="center"
            android:text="0"
            android:includeFontPadding="false"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anonymousUser"
        android:layout_gravity="center_horizontal"
        android:textSize="34sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/blue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="14dp"
        android:background="@color/gray" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10sp">

        <Button
            android:id="@+id/passwordChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordChange"
            android:textSize="16sp" />

        <Button
            android:id="@+id/premiumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgradePremium"
            android:backgroundTint="@color/premium_light_purple"
            android:textColor="@color/lighter_gray"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/surname"
                    android:fontFamily="sans-serif-black" />

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp" />

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:textSize="24sp"
                android:text="Lorem Ipsum" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/email"
                    android:fontFamily="sans-serif-black" />

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:textSize="24sp"
                android:text="Lorem Ipsum" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/city"
                    android:fontFamily="sans-serif-black" />

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:textSize="24sp"
                android:text="Lorem Ipsum" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/description"
                    android:fontFamily="sans-serif-black" />

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/pencil"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:textSize="24sp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />

        </LinearLayout>

    </ScrollView>

</LinearLayout>